--- a/viz/microViz.css
+++ b/viz/microViz.css
@@ -1,7 +1,6 @@
 .microViz .CodeMirror {
   display: inline-block;
   min-width: 600px;
-  min-height: 400px;
   height: auto;
   border-right: 1px dashed hsl(0, 0%, 80%);
 }
@@ -211,8 +210,6 @@ spacer:before {
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100%;
-  /*background: gray;*/
   z-index: -1;
 }
 
